syntax = "proto3";

package com.spring.grpc;

option java_multiple_files = true;
option java_package = "com.spring.grpc";

service UserDetailsService {
  rpc generateRandomUser(UserDetailsRequest) returns (UserDetailsResponse) {};
  rpc generateRandomUserStream(stream UserDetailsRequest) returns (stream UserDetailsResponse) {};
}

message UserDetailsRequest {
  string firstName = 1;
  string lastName = 2;
  string city = 3;
}

message UserDetailsResponse {
  string id = 1;
  int32 numericId = 2;
  string firstName = 3;
  string lastName = 4;
  string city = 5;
}